update del repo

--- a/data_wrangling/1_etl.ipynb
+++ b/data_wrangling/1_etl.ipynb
@@ -151,6 +151,109 @@
     "# Mostrar los resultados finales\n",
     "top_catalogos_populares.show()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Tenemos datos de todos los estados del país? De no ser así, ¿cuáles faltan?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "# Extraer los estados distintos\n",
+    "df_estados = df_parquet.select(\"estado\").distinct()\n",
+    "\n",
+    "# Contar registros por estado\n",
+    "df_estados_presentes = df_parquet.select(\"estado\", \"Year\").distinct()\n",
+    "\n",
+    "# Extraer todos los años distintos presentes en df_parquet\n",
+    "df_anos = df_parquet.select(\"Year\").distinct()\n",
+    "\n",
+    "# Crear todas las combinaciones posibles de estados y años\n",
+    "df_combinaciones = df_estados.crossJoin(df_anos)\n",
+    "\n",
+    "# Realizar un left anti join para encontrar las combinaciones que no están en los datos presentes\n",
+    "estados_faltantes = df_combinaciones.join(df_estados_presentes, [\"estado\", \"Year\"], \"left_anti\")\n",
+    "\n",
+    "# Mostrar los estados faltantes por año\n",
+    "estados_faltantes.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuántas observaciones tenemos por estado?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_conteo_estado_anio = df_parquet.groupBy(\"Year\", \"estado\").agg(count(\"*\").alias(\"Conteo\"))\n",
+    "df_conteo_estado_anio.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para cada año, de cada estado obten: el número de catalogos diferentes por año, ¿ha aumentado el número de catálogos con el tiempo?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_catalogos_anio = df_parquet.groupBy(\"Year\", \"catalogo\").agg(count(\"*\").alias(\"Conteo\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Para el catálogo de \"frutas y legumbres procesadas\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuańtas marcas diferentes tiene tu categoría?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_marcas_distintas= df_parquet.filter(df_parquet[\"catalogo\"]==\"frutas y legumbres procesadas\").select(\"marca\").distinct()\n",
+    "df_marcas_distintas.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
