todas las preguntas ParteA

--- a/data_wrangling/1_etl.ipynb
+++ b/data_wrangling/1_etl.ipynb
@@ -230,7 +230,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "¿Cuańtas marcas diferentes tiene tu categoría?"
+    "¿Cuańtas marcas diferentes tiene tu categoría? Para esta pregunta se toma la columna de \"producto\" como marca, ya que al ser frutas, carecen de marca. De modo que las preguntas que hagan referencia a marcas, se refieren a frutas o legumbres."
    ]
   },
   {
@@ -239,14 +239,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_marcas_distintas= df_parquet.filter(df_parquet[\"catalogo\"]==\"frutas y legumbres procesadas\").select(\"marca\").distinct()\n",
+    "df_marcas_distintas= df_parquet.filter(df_parquet[\"catalogo\"]==\"frutas y legumbres procesadas\").select(\"producto\").distinct()\n",
     "df_marcas_distintas.show()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "¿Cuál es la marca con mayor precio? ¿En qué estado?"
+   ]
   },
   {
    "cell_type": "code",
@@ -254,6 +256,55 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuál es la marca con menor precio en CDMX? (en aquel entonces Distrito Federal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuál es la marca con mayores observaciones?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuáles son el top 5 de marcas con mayor precio en cada estado? ¿Son diferentes?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuáles son el top 5 de marcas con menor precio en CDMX? (en aquel entonces Distrito Federal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Cuáles son el top 5 de marcas con mayores observaciones? ¿Se parecen a las de nivel por estado?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "¿Ha dejado de existir alguna marca durante los años que tienes? ¿Cuál? ¿Cuándo desapareció?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Genera una gráfica de serie de tiempo por estado para la marca con mayor precio -en todos los años-, donde el eje equis es el año y el eje ye es el precio máximo."
+   ]
   }
  ],
  "metadata": {
