--- a/data_wrangling/1_etl.ipynb
+++ b/data_wrangling/1_etl.ipynb
@@ -21,7 +21,8 @@
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession\n",
-    "import pandas as pd\n",
+    "from pyspark.sql.functions import year, col, countDistinct, count, row_number, max as max_, col, min as min_\n",
+    "from pyspark.sql.window import Window\n",
     "\n",
     "# Crear una sesión de Spark\n",
     "spark = SparkSession.builder \\\n",
@@ -55,8 +56,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "df3.write.partitionBy(\"catalogo\").parquet(\"parquets/df_por_catalogo\")"
    ]
@@ -74,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_parquet_byCat = spark.read.parquet(\"parquets/df_por_catalogo\")"
+    "df_parquet = spark.read.parquet(\"parquets/df_por_catalogo\")"
    ]
   },
   {
@@ -247,7 +250,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "¿Cuál es la marca con mayor precio? ¿En qué estado?"
+    "¿Cuál es la marca con mayor precio? ¿En qué estado?\n",
+    "Para cada año, nos traemos las frutas y legumbres más caras y el estado en el que se venden"
    ]
   },
   {
@@ -255,13 +259,105 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pyspark.sql.functions import max as max_, col\n",
+    "\n",
+    "# Suponemos que df_parquet ya está definido y hemos filtrado por \"frutas y legumbres\"\n",
+    "df_frutas_legumbres = df_parquet.filter(col(\"catalogo\") == \"frutas y legumbres\")\n",
+    "\n",
+    "# Asumimos que ya has definido el DataFrame df_frutas_legumbres y que tiene una columna \"Year\"\n",
+    "# Agrupar por año y encontrar el precio máximo en cada año\n",
+    "max_precios_por_ano = df_frutas_legumbres.groupBy(\"Year\").agg(max_(\"precio\").alias(\"max_precio\"))\n",
+    "\n",
+    "# Ahora usamos alias para cada DataFrame antes del join para evitar ambigüedades\n",
+    "df_frutas_legumbres_alias = df_frutas_legumbres.alias(\"frutas_legumbres\")\n",
+    "max_precios_por_ano_alias = max_precios_por_ano.alias(\"max_precios\")\n",
+    "\n",
+    "# Hacer join entre el DataFrame de precios máximos por año y el DataFrame original\n",
+    "df_marca_max_precio = max_precios_por_ano_alias.join(\n",
+    "    df_frutas_legumbres_alias,\n",
+    "    (col(\"max_precios.Year\") == col(\"frutas_legumbres.Year\")) & \n",
+    "    (col(\"max_precios.max_precio\") == col(\"frutas_legumbres.precio\")),\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "# Seleccionar los datos relevantes del join, evitando ambigüedades\n",
+    "df_marca_max_precio = df_marca_max_precio.select(\n",
+    "    col(\"frutas_legumbres.Year\"),\n",
+    "    col(\"frutas_legumbres.producto\"),\n",
+    "    col(\"frutas_legumbres.estado\"),\n",
+    "    col(\"frutas_legumbres.precio\")\n",
+    ").distinct()\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "df_marca_max_precio.show()"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "¿Cuál es la marca con menor precio en CDMX? (en aquel entonces Distrito Federal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.sql.functions import min as min_\n",
+    "\n",
+    "df_frutas_legumbres = df_parquet.filter(col(\"catalogo\") == \"frutas y legumbres\").filter(col(\"estado\")=='ciudad de mexico')\n",
+    "\n",
+    "# Asumimos que ya has definido el DataFrame df_frutas_legumbres y que tiene una columna \"Year\"\n",
+    "# Agrupar por año y encontrar el precio máximo en cada año\n",
+    "min_precios_por_ano = df_frutas_legumbres.groupBy(\"Year\").agg(min_(\"precio\").alias(\"min_precio\"))\n",
+    "\n",
+    "# Ahora usamos alias para cada DataFrame antes del join para evitar ambigüedades\n",
+    "df_frutas_legumbres_alias = df_frutas_legumbres.alias(\"frutas_legumbres\")\n",
+    "min_precios_por_ano_alias = min_precios_por_ano.alias(\"min_precios\")\n",
+    "\n",
+    "# Hacer join entre el DataFrame de precios máximos por año y el DataFrame original\n",
+    "df_marca_max_precio = min_precios_por_ano_alias.join(\n",
+    "    df_frutas_legumbres_alias,\n",
+    "    (col(\"min_precios.Year\") == col(\"frutas_legumbres.Year\")) & \n",
+    "    (col(\"min_precios.min_precio\") == col(\"frutas_legumbres.precio\")),\n",
+    "    \"inner\"\n",
+    ")\n",
+    "\n",
+    "# Seleccionar los datos relevantes del join, evitando ambigüedades\n",
+    "df_marca_max_precio = df_marca_max_precio.select(\n",
+    "    col(\"frutas_legumbres.Year\"),\n",
+    "    col(\"frutas_legumbres.producto\"),\n",
+    "    col(\"frutas_legumbres.estado\"),\n",
+    "    col(\"frutas_legumbres.precio\")\n",
+    ").distinct()\n",
+    "\n",
+    "# Mostrar resultados\n",
+    "df_marca_max_precio.orderBy(col(\"Year\").asc()).show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# si solo queremos el producto de menor precio de todos los años\n",
+    "df_frutas_legumbres = df_parquet.filter(col(\"catalogo\") == \"frutas y legumbres\").filter(col(\"estado\")=='ciudad de mexico')\n",
+    "\n",
+    "# Definir la especificación de la ventana para particionar por 'estado' y 'Year', y ordenar por 'precio'\n",
+    "windowSpec = Window.partitionBy().orderBy(col(\"precio\").asc())\n",
+    "\n",
+    "# Aplicar la función de ventana para asignar un número de fila dentro de cada partición\n",
+    "df_frutas_legumbres = df_frutas_legumbres.withColumn(\"row_num\", row_number().over(windowSpec))\n",
+    "\n",
+    "# Filtrar los registros donde el número de fila es 1, indicando el precio más bajo en cada grupo\n",
+    "df_min_precio = df_frutas_legumbres.filter(col(\"row_num\") == 1).drop(\"row_num\")\n",
+    "\n",
+    "# Mostrar los resultados\n",
+    "df_min_precio.select(\"Year\", \"producto\", \"precio\").show()"
    ]
   },
   {
@@ -272,10 +368,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_conteo_producto = df_parquet\\\n",
+    "    .filter(col(\"catalogo\")==\"frutas y legumbres\")\\\n",
+    "    .groupBy(\"producto\")\\\n",
+    "    .agg(count(\"*\").alias(\"Conteo\"))\\\n",
+    "    .orderBy(col(\"Conteo\").desc())\\\n",
+    "    .limit(1)\n",
+    "\n",
+    "df_conteo_producto.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "¿Cuáles son el top 5 de marcas con mayor precio en cada estado? ¿Son diferentes?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_frutas_legumbres = df_parquet.filter(col(\"catalogo\") == \"frutas y legumbres\")\n",
+    "\n",
+    "# Definir la especificación de la ventana para particionar por 'estado' y 'Year', y ordenar por 'precio' descendente\n",
+    "windowSpec = Window.partitionBy(\"estado\", \"Year\").orderBy(col(\"precio\").desc())\n",
+    "\n",
+    "# Agregar un número de fila dentro de cada partición de estado y año\n",
+    "df_frutas_legumbres = df_frutas_legumbres.withColumn(\"row_number\", row_number().over(windowSpec))\n",
+    "\n",
+    "# Filtrar por los top 5 productos con mayor precio en cada estado y año\n",
+    "top_5_por_estado_y_ano = df_frutas_legumbres.filter(col(\"row_number\") <= 5)\n",
+    "\n",
+    "# Seleccionar las columnas relevantes para la visualización\n",
+    "top_5_por_estado_y_ano = top_5_por_estado_y_ano.select(\"Year\", \"estado\", \"producto\", \"precio\", \"row_number\")\n",
+    "\n",
+    "# Mostrar los resultados ordenados por estado y año para una mejor visualización\n",
+    "top_5_por_estado_y_ano.orderBy(\"estado\", \"Year\", \"row_number\").show()"
    ]
   },
   {
@@ -286,6 +422,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_frutas_legumbres = df_parquet.filter(col(\"catalogo\") == \"frutas y legumbres\")\\\n",
+    "    .filter(col(\"estado\")==\"ciudad de mexico\")\n",
+    "\n",
+    "# Definir la especificación de la ventana para particionar por 'estado' y 'Year', y ordenar por 'precio' descendente\n",
+    "windowSpec = Window.partitionBy(\"Year\").orderBy(col(\"precio\").asc())\n",
+    "\n",
+    "# Agregar un número de fila dentro de cada partición de estado y año\n",
+    "df_frutas_legumbres = df_frutas_legumbres.withColumn(\"row_number\", row_number().over(windowSpec))\n",
+    "\n",
+    "# Filtrar por los top 5 productos con mayor precio en cada estado y año\n",
+    "top_5_por_estado_y_ano = df_frutas_legumbres.filter(col(\"row_number\") <= 5)\n",
+    "\n",
+    "# Seleccionar las columnas relevantes para la visualización\n",
+    "top_5_por_estado_y_ano = top_5_por_estado_y_ano.select(\"Year\", \"estado\", \"producto\", \"precio\", \"row_number\")\n",
+    "\n",
+    "# Mostrar los resultados ordenados por estado y año para una mejor visualización\n",
+    "top_5_por_estado_y_ano.orderBy(\"estado\", \"Year\", \"row_number\").show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -293,10 +454,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_marcas = df_parquet\\\n",
+    "    .filter(col(\"catalogo\")==\"frutas y legumbres\")\\\n",
+    "    .groupBy(\"producto\")\\\n",
+    "    .agg(count(\"*\").alias(\"conteo\"))\\\n",
+    "    .orderBy(col(\"conteo\").desc())\\\n",
+    "    .limit(5)\n",
+    "\n",
+    "df_marcas.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "¿Ha dejado de existir alguna marca durante los años que tienes? ¿Cuál? ¿Cuándo desapareció?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_marcas_desaparecidas = df_parquet\\\n",
+    "    .filter(col(\"catalogo\")==\"frutas y legumbres\")\\\n",
+    "    .groupBy(\"producto\")\\\n",
+    "    .agg(min_(\"Year\").alias(\"primer_aparicion\"), max_(\"Year\").alias(\"ultima_aparicion\"))\n",
+    "\n",
+    "df_marcas_desaparecidas.filter(col(\"ultima_aparicion\")<2024).show()"
    ]
   },
   {
